fix: use position:absolute on mobile for canvas to fix visibility

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -713,9 +713,11 @@ body {
 
 @media (max-width: 900px) {
   .infinite-canvas {
+    position: absolute;
+    min-height: 100dvh;
     padding-left: 32px;
     padding-right: 32px;
-    padding-top: 90px;
+    padding-top: 100px;
   }
 }
 
@@ -723,7 +725,7 @@ body {
   .infinite-canvas {
     padding-left: 16px;
     padding-right: 16px;
-    padding-top: 80px;
+    padding-top: 90px;
     padding-bottom: 32px;
   }
 
